# VoiceChatCompanion

./: README.md  app.py  pyproject.toml  replit.nix
static/css/: style.css
static/js/: app.js  audio-processor.js
templates/: index.html
